# ardupilot_sitl_gazebo_plugin

./: LICENSE.md  README.md
aircraft_plugin/: CMakeLists.txt  package.xml
aircraft_plugin/include/aircraft_plugin/: aircraft_plugin.h  aircraft_plugin.h~
aircraft_plugin/src/: aircraft_plugin.cpp
ardupilot_sitl_gazebo_plugin/: CHANGELOG.md  CMakeLists.txt  README.md  package.xml
ardupilot_sitl_gazebo_plugin/include/ardupilot_sitl_gazebo_plugin/: SocketAPM.h  ardupilot_sitl_gazebo_plugin.h
ardupilot_sitl_gazebo_plugin/launch/: LFLY_world_cessna.launch  almost_empty_world.launch  cessna_spawn.launch  empty_world.launch  empty_world_cessna.launch  iris_spawn.launch  outdoor_drcsim.launch  outdoor_village.launch  outdoor_village_flat.launch  powerplant.launch  wallfollow_test_world.launch  warehouse.launch
ardupilot_sitl_gazebo_plugin/materials/scripts/: cessna.material
ardupilot_sitl_gazebo_plugin/meshes/meshes_drones/: iris_prop_ccw.dae  iris_prop_cw.dae
ardupilot_sitl_gazebo_plugin/meshes/meshes_outdoor/grass_plane_medium/: model.config  model.sdf
ardupilot_sitl_gazebo_plugin/meshes/meshes_outdoor/grass_plane_small/: model.config  model.sdf
ardupilot_sitl_gazebo_plugin/meshes/meshes_outdoor/heightmap_5/: model.sdf
ardupilot_sitl_gazebo_plugin/meshes/meshes_outdoor/mud_plane/: model.config  model.sdf
ardupilot_sitl_gazebo_plugin/meshes/meshes_outdoor/pine_tree/: model.config  model.sdf
ardupilot_sitl_gazebo_plugin/meshes/meshes_outdoor/pine_tree/meshes/: pine_tree.dae
ardupilot_sitl_gazebo_plugin/meshes/meshes_outdoor/playfield_heightmap_1/: model.config  model.sdf
ardupilot_sitl_gazebo_plugin/meshes/meshes_outdoor/playfield_heightmap_2/: model.config  model.sdf
ardupilot_sitl_gazebo_plugin/meshes/meshes_outdoor/power_plant/: model.sdf
ardupilot_sitl_gazebo_plugin/meshes/meshes_outdoor/rock/: model.config  model.sdf
ardupilot_sitl_gazebo_plugin/meshes/meshes_outdoor/rock/meshes/: rock.dae
ardupilot_sitl_gazebo_plugin/meshes/meshes_outdoor/sample_wall/: SampleWall.sdf  model.config
ardupilot_sitl_gazebo_plugin/meshes/meshes_outdoor/sample_wall2/: model.config  sample_wall2.sdf
ardupilot_sitl_gazebo_plugin/meshes/meshes_outdoor/sample_wall3/: model.config  sample_wall3.sdf
ardupilot_sitl_gazebo_plugin/meshes/meshes_outdoor/sample_wall3/materials/scripts/: wall.material
ardupilot_sitl_gazebo_plugin/meshes/meshes_sensors/board_camera/: model.config  model.sdf
ardupilot_sitl_gazebo_plugin/meshes/meshes_sensors/lidar_lite_v2/: model.config  model.sdf
ardupilot_sitl_gazebo_plugin/meshes/meshes_sensors/lidar_lite_v2/meshes/: lidar_lite_v2.dae
ardupilot_sitl_gazebo_plugin/meshes/meshes_sensors/lidar_lite_v2_withRay/: model.config  model.sdf
ardupilot_sitl_gazebo_plugin/meshes/meshes_sensors/parachute_small/: model.config
ardupilot_sitl_gazebo_plugin/meshes/meshes_sensors/recorder_camera/: model.sdf
ardupilot_sitl_gazebo_plugin/meshes/meshes_sensors/recorder_camera/meshes/: board_camera.dae
ardupilot_sitl_gazebo_plugin/src/: SocketAPM.cpp  apm_plugin_apm_side.cpp  apm_plugin_gazebo_side.cpp  apm_plugin_parachute.cpp  apm_plugin_ros_side.cpp  ardupilot_sitl_gazebo_plugin.cpp
ardupilot_sitl_gazebo_plugin/srv/: ReleaseApmLapseLock.srv  TakeApmLapseLock.srv
ardupilot_sitl_gazebo_plugin/urdf/: aircraft_base.xacro  cessna.xacro  cessna_base.xacro  gps_home_location.xacro  iris.xacro  iris_base.xacro  multirotor_base.xacro  recorder_camera.xacro
ardupilot_sitl_gazebo_plugin/urdf/sensors/: generic_camera.urdf.xacro  lidar_sensor.urdf.xacro  sonar_sensor.urdf.xacro
ardupilot_sitl_gazebo_plugin/worlds/: ReadMe-worlds.txt
ardupilot_sitl_gazebo_plugin/worlds/LFLY_world_cessna/: empty.world
ardupilot_sitl_gazebo_plugin/worlds/almost_empty_world/: almost_empty.world
ardupilot_sitl_gazebo_plugin/worlds/empty_world/: empty.world
ardupilot_sitl_gazebo_plugin/worlds/empty_world_cessna/: empty.world
ardupilot_sitl_gazebo_plugin/worlds/outdoor_drcsim/: outdoor.world
ardupilot_sitl_gazebo_plugin/worlds/outdoor_village/: outdoor_village.world
ardupilot_sitl_gazebo_plugin/worlds/outdoor_village_flat/: outdoor_village_flat.world
ardupilot_sitl_gazebo_plugin/worlds/powerplant/: powerplant.world
ardupilot_sitl_gazebo_plugin/worlds/wallfollow_test_world/: wallfollow_test_world.world
ardupilot_sitl_gazebo_plugin/worlds/warehouse/: warehouse_full2.world
ardupilot_sitl_gazebo_plugin/worlds/warehouse_aisle/: warehouse_alley.world  warehouse_alley2.world
liftdrag_plugin/: CMakeLists.txt  package.xml
liftdrag_plugin/include/: liftdrag_plugin.hh  liftdrag_plugin.hh~
liftdrag_plugin/src/: aircraft_plugin.cpp~  liftdrag_plugin.cc
recorder_camera_plugin/: CMakeLists.txt  README.md  package.xml
recorder_camera_plugin/include/: recorder_camera_plugin.h  utilities.h
recorder_camera_plugin/src/: recorder_camera_plugin.cpp
